Updated build of Product API to become system independent

--- a/Microservices/product-api/Makefile
+++ b/Microservices/product-api/Makefile
@@ -9,7 +9,7 @@ build-docker: build
 run-docker:
 	-docker stop rvstore-product-api
 	-docker rm rvstore-product-api
-	docker run -d -p 9001:9001 --name rvstore-product-api vergeops/k8s-rvstore-product-api:1.0
+	docker run  -p 9001:9001 --net k8s-rvstore  --name rvstore-product-api vergeops/k8s-rvstore-product-api:1.0
 	
 push-docker:
 	docker push vergeops/k8s-rvstore-product-api:1.0
