Updated build of Gateway API to become system independent, also updated reference to Order & product API

--- a/Microservices/gateway-service/Dockerfile
+++ b/Microservices/gateway-service/Dockerfile
@@ -1,4 +1,11 @@
+FROM maven:3.5.2-jdk-8 AS builder
+COPY src /usr/src/app/src
+COPY pom.xml /usr/src/app
+RUN mvn -f /usr/src/app/pom.xml clean package
+
 FROM alpine:latest
+COPY --from=builder /usr/src/app/target/gateway-service.jar /usr/app/gateway-service.jar
+
 MAINTAINER Tim Solley
 USER root
 
@@ -6,5 +13,4 @@ RUN apk update
 RUN apk fetch openjdk8
 RUN apk add openjdk8
 
-ADD target/gateway-service.jar /
-ENTRYPOINT java -jar /gateway-service.jar
+ENTRYPOINT java -jar /usr/app/gateway-service.jar
