--- a/Microservices/gateway-service/src/main/resources/application.yml
+++ b/Microservices/gateway-service/src/main/resources/application.yml
@@ -10,7 +10,7 @@ zuul:
   routes:
     products:
       path: /products/**
-      url: http://localhost:9001/products
+      url: http://rvstore-product-api:9001/products
     orders:
       path: /orders/**
-      url: http://localhost:9002/orders
+      url: http://rvstore-order-api:9002/orders
