Updated DB dependency

--- a/Microservices/order-api/src/main/resources/application.yml
+++ b/Microservices/order-api/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
   data:
     mongodb:
       database: orders
-      uri: mongodb://mongoadmin:secret@localhost:27017
+      uri: mongodb://mongoadmin:secret@rvstore-db:27017
