Update the way running a container in consistent fashion

--- a/Microservices/Makefile
+++ b/Microservices/Makefile
@@ -3,6 +3,9 @@ SHELL := /bin/bash
 create-network:
 	docker network create k8s-rvstore
 
-run-mongo:
-	-docker rm -f rvstore-db
+run-docker: stop-docker
 	docker run --rm --net k8s-rvstore -e MONGO_INITDB_ROOT_USERNAME=mongoadmin -e MONGO_INITDB_ROOT_PASSWORD=secret --name rvstore-db mongo:latest
+
+stop-docker:
+	-docker stop rvstore-db
+	-docker rm rvstore-db
