--- a/Microservices/order-simulator/Makefile
+++ b/Microservices/order-simulator/Makefile
@@ -6,10 +6,12 @@ build-package:
 build-docker:
 	docker build -t vergeops/k8s-rvstore-order-simulator:1.0 .
 	
-run-docker:
+run-docker: stop-docker
+	docker run --name rvstore-order-simulator --net k8s-rvstore vergeops/k8s-rvstore-order-simulator:1.0
+
+stop-docker:
 	-docker stop rvstore-order-simulator
 	-docker rm rvstore-order-simulator
-	docker run --name rvstore-order-simulator --net k8s-rvstore vergeops/k8s-rvstore-order-simulator:1.0
-	
+
 push-docker:
 	docker push vergeops/k8s-rvstore-order-simulator:1.0
