--- a/Microservices/order-api/Makefile
+++ b/Microservices/order-api/Makefile
@@ -6,10 +6,12 @@ build-package:
 build-docker:
 	docker build -t vergeops/k8s-rvstore-order-api:1.0 .
 	
-run-docker:
+run-docker:stop-docker
+	docker run -p 9002:9002 --net k8s-rvstore --name rvstore-order-api vergeops/k8s-rvstore-order-api:1.0
+
+stop-docker:
 	-docker stop rvstore-order-api
 	-docker rm rvstore-order-api
-	docker run -p 9002:9002 --net k8s-rvstore --name rvstore-order-api vergeops/k8s-rvstore-order-api:1.0
-	
+
 push-docker:
 	docker push vergeops/k8s-rvstore-order-api:1.0
