--- a/Microservices/product-api/Makefile
+++ b/Microservices/product-api/Makefile
@@ -6,10 +6,12 @@ build:
 build-docker: build
 	docker build -t vergeops/k8s-rvstore-product-api:1.0 .
 	
-run-docker:
+run-docker: stop-docker
+	docker run  -p 9001:9001 --net k8s-rvstore  --name rvstore-product-api vergeops/k8s-rvstore-product-api:1.0
+
+stop-docker:
 	-docker stop rvstore-product-api
 	-docker rm rvstore-product-api
-	docker run  -p 9001:9001 --net k8s-rvstore  --name rvstore-product-api vergeops/k8s-rvstore-product-api:1.0
 	
 push-docker:
 	docker push vergeops/k8s-rvstore-product-api:1.0
