--- a/Microservices/ui/Makefile
+++ b/Microservices/ui/Makefile
@@ -6,10 +6,12 @@ build-package:
 build-docker: build-package
 	docker build -t vergeops/k8s-rvstore-ui:1.0 .
 	
-run-docker:
+run-docker: stop-docker
+	docker run -p 80:80 --name rvstore-ui --net k8s-rvstore vergeops/k8s-rvstore-ui:1.0
+
+stop-docker:
 	-docker stop rvstore-ui
 	-docker rm rvstore-ui
-	docker run -p 80:80 --name rvstore-ui --net k8s-rvstore vergeops/k8s-rvstore-ui:1.0
-	
+
 push-docker:
 	docker push vergeops/k8s-rvstore-ui:1.0
